// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane B2 — the phone is unchanged (golden, 390 × 844 iOS) reports (default tab) 1`] = `
{
  "lines": 487,
  "sha256": "ab79a0a828e0b57c4d0173a1e73113ed346b01f616a2b3078e92cfadfb088d13",
}
`;

exports[`lane B2 — the phone is unchanged (golden, 390 × 844 iOS) reports ?tab=aging 1`] = `
{
  "lines": 398,
  "sha256": "40a10a7222f095d7dd2cba0a2730fc08bfda2cb5b428672a7fc79dedb8413e70",
}
`;

exports[`lane B2 — the phone is unchanged (golden, 390 × 844 iOS) reports ?tab=aging with three issued invoices (the aging rows drawn) 1`] = `
{
  "lines": 553,
  "sha256": "0c1cf7618aab60ba755d4e8e7d3ad1cc13c0a40ffce7a7ad4a7a0d6a2a8e0999",
}
`;

exports[`lane B2 — the phone is unchanged (golden, 390 × 844 iOS) reports default tab with three issued invoices (billed figures on the WIP rows) 1`] = `
{
  "lines": 487,
  "sha256": "ebefb242a35fdf975553744803f718a6658e02338d9fa13827b71cc1bb9309ff",
}
`;

exports[`lane B2 — the phone is unchanged (golden, 390 × 844 iOS) reports: Profit pressed 1`] = `
{
  "lines": 431,
  "sha256": "ee5a4f8c68ef64de95e2e219105252be51d7ddb99224bb4553d78b28e623039c",
}
`;

exports[`lane B2 — the phone is unchanged (golden, 390 × 844 iOS) wip-report (drill sheet + period picker mounted) 1`] = `
{
  "lines": 716,
  "sha256": "327f7aabcb92bd29f33b911de1b53447406c1c80549d60dc85f290f6e4c6b86e",
}
`;

exports[`lane B2 — the phone is unchanged (golden, 390 × 844 iOS) wip-report: the first project row pressed (the drill sheet drawn) 1`] = `
{
  "lines": 803,
  "sha256": "50a39559c0d8d6b4dae5195ef81c6d7055c18430801355df28728ea7503c2932",
}
`;
